# BrIan-Language

./: .gitignore  2  CMakeLists.txt  Improvements.md  README.md  TestAssembler.sh  TestDesugarizer.sh  TestNameResolver.sh  TestParser.sh  TestTokenizer.sh  TestTypeChecker.sh  Tokenizer  TokenizerFunctions.h.gch  bcc.c  compile.sh  output.txt  output_executable  test.sh  test.txt
TestCases/: CMakeLists.txt  Functions.b  NoStart.b  main.c
TestCases/Desugarizer/: DesugarTest.b  SimpleSugar.c  TestSugar.c
TestCases/LLVM/: SimpleTest.b  TestLLVM.c
TestCases/NameResolver/: AllCases.b  AllNames.c  DoWhile.b  DoWhileBasic.b  DoWhileInvalidScope.b  EnumBasic.b  EnumInvalid.b  For.b  ForBodyInit.b  ForEscape.b  ForInner.b  ForInvalid.b  ForScope.b  ForShadow.b  FuncArgs.b  FuncBadArgs.b  FuncExcessArgs.b  FuncInvalidCall.b  FuncLeak.b  FuncMinimalArgs.b  FuncNest.b  FuncShadow.b  FuncUndefined.b  IfNest.b  IfNestDouble.b  IfNestShadow.b  IfScope.b  IfShadow.b  IfVar.b  IfVarUndefined.b  MultiVar.b  NestedStructs.b  ParamShadow.b  Recursion.b  Redeclaration.b  Resolved.b  Return.b  ReturnUndefined.b  ShadowedVar.b  Struct.b  (+18 more)
TestCases/Parser/: AllCases.b  AllCases.c  Arithmetic.b  Arrays.b  EmptyMain.b  EmptyStart.b  Enum.b  Functions.b  GlobalVar.b  NestedStructs.b  StartFunc.b  StartUpdate.b  Struct.b  TestParser.c  Typedef.b  ZGlobalVar.b
TestCases/Tokenizer/: .AllTokens.b.swp  AllTokens.b  AllTokens.c  TestTokenizer.c
TestCases/TypeChecker/: AllCases.c  AllTypes.c  BitwiseAnd.b  BitwiseOr.b  BitwiseShift.b  BitwiseXor.b  BoolToIntWidening.b  DefinedType.b  EqualityComparison.b  FloatIntCompoundAssign.b  FloatToDoubleImplicitCast.b  FuncCall.b  FuncInvalidParamTypes.b  I8ToI16Widening.b  ImplicitCast.b  IntAssign.b  IntCompoundAssign.b  IntDivision.b  IntFloatArithmeticPromotion.b  IntToBoolWidening.b  InvalidBitwiseAndFloat.b  InvalidBitwiseShiftFloat.b  InvalidEqualityMixedTypes.b  InvalidFloatToIntArithmetic.b  InvalidFloatToIntAssign.b  InvalidFuncParamTypeMismatch.b  InvalidFuncReturnTypeMismatch.b  InvalidI16ToI8Narrowing.b  InvalidI64ToI32Narrowing.b  InvalidIfBodyTypeMismatch.b  InvalidImplictCast.b  InvalidInt.b  InvalidPostfixIncrementString.b  InvalidPowExprString.b  InvalidRelationalComparisonString.b  InvalidSignedToUnsigned.b  InvalidStringCompoundAssign.b  InvalidStringToIntAssign.b  InvalidStructMemberDoesntExist.b  InvalidStructMemberTypeMismatch.b  (+28 more)
docs/: CMakeLists.txt  Example.b  firstfollow.md  grammar.md  improvements.md  pipeline.md  tokens.md
docs/include/: AST.h  ArenaAllocator.h  Compiler.h  DebugTools.h  Environment.h  ErrorHandler.h  NameResolver.h  Namespace.h  Parser.h  SToken.h  STokenizer.h  Symbol.h  Token.h  Tokenizer.h
docs/src/: AST.c  ArenaAllocator.c  Compiler.c  DebugTools.c  Environment.c  ErrorHandler.c  NameResolver.c  Namespace.c  Parser.c  Token.c  Tokenizer.c  main.c
docs/tests/: AllTokens.b  CMakeLists.txt  GoldenTester.c  GoldenTester.h  file.txt
docs/tests/nameres/: test.src
docs/tests/nameres/control_flow/invalid/: DoWhileNoExpr.src  DoWhileNoWhile.src  DoWhileOutOfScope.src  ElifNoExpr.src  ForOutOfScope.src  IfNoExpr.src  IfOutOfScope.src  ReturnEscaped.src  ReturnOutOfScope.src  SwitchCaseDoesntExist.src  SwitchInvalidCase.src  SwitchNoExpr.src  SwitchOutOfScope.src  WhileNoExpr.src  WhileOutOfScope.src
docs/tests/nameres/control_flow/valid/: BasicIf.src  BasicIfElifElse.src  Break.src  Continue.src  DoWhile.src  DoWhileAdvancedExpr.src  DoWhileExpr.src  DoWhileShadow.src  For.src  ForDeclVar.src  ForEmpty.src  ForEmptyCond.src  ForEmptyInc.src  ForEmptyInit.src  ForExprList.src  ForIncExprList.src  ForShadow.src  IfElif.src  IfElse.src  IfShadow.src  Return.src  ReturnEmpty.src  ReturnExpr.src  Switch.src  SwitchAdvancedExpr.src  SwitchCaseLiteral.src  (+7 more)
docs/tests/parser/: Main.b
docs/tests/tokenizer/: AllTokens.b
(+910 files in other folders)
